turtleart.disktwo.DiskTwo.scala.error
Erreur de compilation :
DiskTwo:4: error: not found: value setCouleurCrayon
    setCouleurCrayon(Color.BLACK)
    ^DiskTwo:6: error: not found: value setCouleurCrayon
    setCouleurCrayon(Color.RED)
    ^