turtleart.disktwo.DiskTwo.scala.code
override def run() {
  for(i<-0 to 9)
  {
    setCouleurCrayon(Color.BLACK)
    portionDisque(20)
    setCouleurCrayon(Color.RED)
    portionDisque(20)
  }
  
}

def portionDisque(deg:Int)
{
  for(d<- 0 to deg-1)
  {
    avance(100)
    recule(100)
    droite(1)
  }
}